# strictenv

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/strictenv/: __init__.py  _coerce.py  _env.py  base.py  errors.py  fields.py  structs.py  transforms.py
tests/: test_alias_and_case.py  test_env_example.py  test_env_file_features.py  test_errors.py  test_field_features.py  test_load_basic.py  test_nested_env.py  test_nested_transforms.py  test_struct_transforms.py  test_transforms.py  test_types.py
